--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0011.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0011.html
@@ -144,8 +144,7 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 332 1337 529 1390">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’)</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">nomen1)</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 552 1334 889 1390">
@@ -524,8 +523,7 @@
         </span>
         <span id="w_83" class="ocr_word" title="bbox 909 1817 1099 1855">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uostrara</ins>
-            <del title="nlp 0.90">uostrara</del>
+            <ins title="nlp 2.00">nostram</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 1133 1816 1320 1853">
@@ -739,17 +737,11 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1921 2045 2007 2085">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lau-</ins>
+            <ins title="nlp 2.00">laudatur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 2125 2004 2188">
-        <span id="w_119" class="ocr_word" title="bbox 193 2135 317 2176">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">datur</ins>
-            <del title="nlp 0.90">laudatur</del>
-          </span>
-        </span>
         <span id="w_120" class="ocr_word" title="bbox 348 2134 412 2175">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">his</ins>
@@ -1298,17 +1290,11 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1919 2784 2008 2807">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">asse-</ins>
+            <ins title="nlp 2.00">assequimur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 2833 2009 2890">
-        <span id="w_221" class="ocr_word" title="bbox 196 2847 341 2888">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quimur.</ins>
-            <del title="nlp 0.90">assequimur.</del>
-          </span>
-        </span>
         <span id="w_222" class="ocr_word" title="bbox 392 2847 555 2890">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quoniam</ins>
@@ -1525,7 +1511,7 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 289 3022 299 3053">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins title="nlp 2.00">l</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 331 3022 489 3055">
@@ -1542,7 +1528,7 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 583 3021 604 3053">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.</ins>
+            <ins title="nlp 2.00">l.</ins>
           </span>
         </span>
         <span id="w_261" class="ocr_word" title="bbox 637 3021 686 3054">
@@ -1697,7 +1683,7 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 1931 3075 2009 3098">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cou-</ins>
+            <ins title="nlp 2.00">continente)</ins>
           </span>
         </span>
       </span>
