--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0012.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0012.html
@@ -97,8 +97,7 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 313 309 354 348">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">6v</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 398 323 459 347" lang="grc">
@@ -1228,9 +1227,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 645 1745 666 1784">
+        <span id="w_202_0" class="ocr_word" title="bbox 645 1745 666 1784">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">1—2v</ins>
+          </span>
+        </span>
+        <span id="w_202_1" class="ocr_word" title="bbox 645 1745 666 1784">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 810 1741 1055 1797">
@@ -1263,11 +1267,6 @@
         <span id="w_210" class="ocr_word" title="bbox 1859 1740 1934 1780" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
-          </span>
-        </span>
-        <span id="w_211" class="ocr_word" title="bbox 1957 1741 2092 1793" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φωνῆς</ins>
           </span>
         </span>
       </span>
@@ -1398,9 +1397,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 569 1985 613 2025">
+        <span id="w_234_0" class="ocr_word" title="bbox 569 1985 613 2025">
           <span class="alternatives">
-            <ins title="nlp 2.00">2v—6r</ins>
+            <ins class="alt" title="nlp 2.00">2v—6r</ins>
+          </span>
+        </span>
+        <span id="w_234_1" class="ocr_word" title="bbox 569 1985 613 2025">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 759 1988 857 2038">
@@ -1440,18 +1444,8 @@
             <ins class="alt" title="nlp 1.00">πορφυρίου</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 1934 1993 2094 2031" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσαγω-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 272 2059 2093 2119">
-        <span id="w_245" class="ocr_word" title="bbox 272 2081 341 2119" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γῆς</ins>
-          </span>
-        </span>
         <span id="w_246" class="ocr_word" title="bbox 375 2064 452 2104" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
@@ -1504,17 +1498,11 @@
         </span>
         <span id="w_255" class="ocr_word" title="bbox 2033 2059 2093 2100">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu-</ins>
+            <ins title="nlp 2.00">incipit</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 275 2138 2094 2198">
-        <span id="w_256" class="ocr_word" title="bbox 275 2144 377 2198">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cipit</ins>
-            <del title="nlp 0.90">iucipit</del>
-          </span>
-        </span>
         <span id="w_257" class="ocr_word" title="bbox 424 2143 631 2187" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μέλλοντες</ins>
@@ -1572,12 +1560,7 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 341 2224 393 2266">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16</ins>
-          </span>
-        </span>
-        <span id="w_268" class="ocr_word" title="bbox 405 2222 517 2275">
-          <span class="alternatives">
-            <ins title="nlp 2.00">a43),</ins>
+            <ins class="alt" title="nlp 2.00">16a43),</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 549 2222 800 2264">
@@ -1754,15 +1737,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1727 2378 1768 2419">
+        <span id="w_302_0" class="ocr_word" title="bbox 1727 2378 1768 2419">
           <span class="alternatives">
-            <ins title="nlp 2.00">6r—6v</ins>
+            <ins class="alt" title="nlp 2.00">6r—6v</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 1899 2379 2098 2431">
+        <span id="w_302_1" class="ocr_word" title="bbox 1727 2378 1768 2419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">leguntur</ins>
-            <del title="nlp 0.90">leguntur</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1775,13 +1757,8 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 353 2465 378 2504">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">f.</ins>
+            <ins class="alt" title="nlp 2.00">f.7—20</ins>
             <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span id="w_308" class="ocr_word" title="bbox 403 2463 423 2504">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">7—20</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 579 2462 636 2503">
@@ -1926,7 +1903,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 923 2621 1095 2674">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">’).</ins>
+            <ins title="nlp 2.00">404)2).</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1161 2623 1342 2673">
@@ -2284,8 +2261,7 @@
       <span class="ocr_line" title="bbox 383 3082 2102 3126">
         <span id="w_397" class="ocr_word" title="bbox 383 3085 408 3126">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">-)</ins>
-            <del title="nlp 0.90">-</del>
+            <ins title="nlp 2.00">2)</ins>
           </span>
         </span>
         <span id="w_398" class="ocr_word" title="bbox 435 3084 593 3118">
