--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0013.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0013.html
@@ -94,8 +94,7 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 336 350 490 379">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bomeu</ins>
-            <del title="nlp 0.90">Bomeu</del>
+            <ins title="nlp 2.00">nomen</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 523 336 795 379">
@@ -124,8 +123,7 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1242 339 1434 383">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">liauserit</ins>
-            <del title="nlp 0.90">liauserit</del>
+            <ins title="nlp 2.00">hauserit</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1454 346 1582 395">
@@ -142,17 +140,11 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1747 343 1998 400">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">interpreta-</ins>
+            <ins title="nlp 2.00">interpretationes.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 179 415 1995 470">
-        <span id="w_22" class="ocr_word" title="bbox 179 415 328 457">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tiones.</ins>
-            <del title="nlp 0.90">interpretationes.</del>
-          </span>
-        </span>
         <span id="w_23" class="ocr_word" title="bbox 385 417 553 470">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">culpam</ins>
@@ -223,8 +215,7 @@
         </span>
         <span id="w_34" class="ocr_word" title="bbox 468 496 630 538">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">erimini</ins>
-            <del title="nlp 0.90">erimini</del>
+            <ins title="nlp 2.00">crimini</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 663 497 851 538">
@@ -614,8 +605,7 @@
       <span class="ocr_line" title="bbox 167 1053 1986 1120">
         <span id="w_99" class="ocr_word" title="bbox 167 1053 268 1095">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inris</ins>
-            <del title="nlp 0.90">inris</del>
+            <ins title="nlp 2.00">iuris</ins>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 299 1055 452 1098">
@@ -1316,17 +1306,11 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1878 1882 1975 1922">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quo-</ins>
+            <ins title="nlp 2.00">quominus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 1934 1974 2002">
-        <span id="w_216" class="ocr_word" title="bbox 157 1934 292 1975">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">minus</ins>
-            <del title="nlp 0.90">quominus</del>
-          </span>
-        </span>
         <span id="w_217" class="ocr_word" title="bbox 325 1937 490 1991">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">culpam</ins>
@@ -1371,17 +1355,11 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1883 1962 1974 2002">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">probabile</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 2012 1973 2084">
-        <span id="w_225" class="ocr_word" title="bbox 157 2012 297 2056">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">babile</ins>
-            <del title="nlp 0.90">probabile</del>
-          </span>
-        </span>
         <span id="w_226" class="ocr_word" title="bbox 329 2022 393 2057">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est</ins>
@@ -1802,17 +1780,11 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 1841 2507 1963 2548">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iufor-</ins>
+            <ins title="nlp 2.00">informemus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 150 2574 1962 2641">
-        <span id="w_298" class="ocr_word" title="bbox 150 2583 309 2613">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">memus</ins>
-            <del title="nlp 0.90">iuformemus</del>
-          </span>
-        </span>
         <span id="w_299" class="ocr_word" title="bbox 346 2574 454 2615">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">huuc</ins>
@@ -1869,7 +1841,7 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1830 2587 1962 2641">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">philo-</ins>
+            <ins title="nlp 2.00">philosopho</ins>
           </span>
         </span>
       </span>
@@ -2160,17 +2132,11 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1866 3000 1957 3041">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">proferantur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 143 3046 1955 3117">
-        <span id="w_356" class="ocr_word" title="bbox 143 3046 334 3091">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ferantur</ins>
-            <del title="nlp 0.90">proferantur</del>
-          </span>
-        </span>
         <span id="w_357" class="ocr_word" title="bbox 372 3052 445 3093">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ilia</ins>
