--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0051.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0051.html
@@ -2000,7 +2000,7 @@
       <span class="ocr_line" title="bbox 181 2482 1848 2545">
         <span id="w_390" class="ocr_word" title="bbox 181 2491 353 2545" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">''ακριβείᾳ</ins>
+            <ins title="nlp 2.00">ακριβείᾳ</ins>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 385 2507 426 2530" lang="grc">
@@ -2302,8 +2302,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1069 2818 1191 2862">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cfpSlpriv</ins>
-            <del title="nlp 0.90">cfpSlpriv</del>
+            <ins title="nlp 2.00">ἄρθρον</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 1218 2814 1278 2848">
@@ -2343,8 +2342,7 @@
       <span class="ocr_line" title="bbox 116 2866 1828 2927">
         <span id="w_457" class="ocr_word" title="bbox 116 2892 266 2927">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TOpspyoi</ins>
-            <del title="nlp 0.90">TOpspyoi</del>
+            <ins title="nlp 2.00">πάρεργοι</ins>
           </span>
         </span>
         <span id="w_458_0" class="ocr_word" title="bbox 291 2892 308 2914">
@@ -2375,8 +2373,7 @@
         </span>
         <span id="w_463" class="ocr_word" title="bbox 866 2890 962 2911">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">a-jxat</ins>
-            <del title="nlp 0.90">a-jxat</del>
+            <ins title="nlp 2.00">αὐταί</ins>
           </span>
         </span>
         <span id="w_464" class="ocr_word" title="bbox 989 2878 1013 2910">
@@ -2387,14 +2384,12 @@
         </span>
         <span id="w_465" class="ocr_word" title="bbox 1158 2873 1240 2917">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ofov]</ins>
-            <del title="nlp 0.90">ofov</del>
+            <ins title="nlp 2.00">οἷον]</ins>
           </span>
         </span>
         <span id="w_466" class="ocr_word" title="bbox 1269 2883 1344 2906">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oGov</ins>
-            <del title="nlp 0.90">oGov</del>
+            <ins title="nlp 2.00">ὅσον</ins>
           </span>
         </span>
         <span id="w_467" class="ocr_word" title="bbox 1370 2871 1396 2904">
@@ -2410,8 +2405,7 @@
         </span>
         <span id="w_469" class="ocr_word" title="bbox 1587 2868 1777 2912">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ivapw-cia</ins>
-            <del title="nlp 0.90">ivapw-cia</del>
+            <ins title="nlp 2.00">ἀνθρώπεια</ins>
           </span>
         </span>
         <span id="w_470" class="ocr_word" title="bbox 1803 2866 1828 2897">
@@ -2447,8 +2441,7 @@
         </span>
         <span id="w_475" class="ocr_word" title="bbox 583 2951 632 2972">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">o-t</ins>
-            <del title="nlp 0.90">o-t</del>
+            <ins title="nlp 2.00">ὅτι</ins>
           </span>
         </span>
         <span id="w_476" class="ocr_word" title="bbox 658 2949 723 2971">
@@ -2501,8 +2494,7 @@
         </span>
         <span id="w_483" class="ocr_word" title="bbox 1581 2937 1648 2971">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eioyj</ins>
-            <del title="nlp 0.90">eioyj</del>
+            <ins title="nlp 2.00">εἰδῇ</ins>
           </span>
         </span>
         <span id="w_484" class="ocr_word" title="bbox 1669 2925 1792 2967">
@@ -2563,14 +2555,12 @@
         </span>
         <span id="w_494" class="ocr_word" title="bbox 992 2994 1072 3035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oios]</ins>
-            <del title="nlp 0.90">oios</del>
+            <ins title="nlp 2.00">οἶδε]</ins>
           </span>
         </span>
         <span id="w_495" class="ocr_word" title="bbox 1099 3003 1169 3026">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oioa</ins>
-            <del title="nlp 0.90">oioa</del>
+            <ins title="nlp 2.00">οἰδα</ins>
           </span>
         </span>
         <span id="w_496" class="ocr_word" title="bbox 1196 2992 1219 3024">
@@ -2599,8 +2589,7 @@
         </span>
         <span id="w_500" class="ocr_word" title="bbox 187 3055 310 3099">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ctuTwv]</ins>
-            <del title="nlp 0.90">ctuTwv</del>
+            <ins title="nlp 2.00">αὐτὼν]</ins>
           </span>
         </span>
         <span id="w_501" class="ocr_word" title="bbox 338 3067 379 3087">
@@ -2611,14 +2600,12 @@
         </span>
         <span id="w_502" class="ocr_word" title="bbox 408 3068 475 3088">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">twv</ins>
-            <del title="nlp 0.90">twv</del>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
         <span id="w_503" class="ocr_word" title="bbox 503 3055 633 3088">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ovtcov?</ins>
-            <del title="nlp 0.90">ovtcov?</del>
+            <ins title="nlp 2.00">ὄντων?</ins>
           </span>
         </span>
         <span id="w_504" class="ocr_word" title="bbox 794 3053 832 3085">
@@ -2749,9 +2736,14 @@
             <ins class="alt" title="nlp 1.00">ἅτι</ins>
           </span>
         </span>
-        <span id="w_529" class="ocr_word" title="bbox 367 3174 433 3213" lang="grc">
+        <span id="w_529_0" class="ocr_word" title="bbox 367 3174 433 3213">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;διὰ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;διὰ</ins>
+          </span>
+        </span>
+        <span id="w_529_1" class="ocr_word" title="bbox 367 3174 433 3213">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_530" class="ocr_word" title="bbox 458 3184 496 3204" lang="grc">
@@ -2779,9 +2771,14 @@
             <ins class="alt" title="nlp 1.00">πρῶτος</ins>
           </span>
         </span>
-        <span id="w_535" class="ocr_word" title="bbox 935 3167 1081 3212" lang="grc">
+        <span id="w_535_0" class="ocr_word" title="bbox 935 3167 1081 3212">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁρισμὸς&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">ὁρισμὸς&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_535_1" class="ocr_word" title="bbox 935 3167 1081 3212">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_536" class="ocr_word" title="bbox 1107 3165 1194 3202" lang="grc">
@@ -2808,17 +2805,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">P</ins>
             <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_541" class="ocr_word" title="bbox 1779 3181 1794 3189">
-          <span class="alternatives">
-            <ins title="nlp 2.00">27</ins>
-          </span>
-        </span>
-        <span id="w_543" class="ocr_word" title="bbox 1848 3158 1925 3199">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">post</ins>
-            <del title="nlp 0.90">post</del>
           </span>
         </span>
       </span>
