--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0014.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0014.html
@@ -1246,7 +1246,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1902 1640 2118 1695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Categori-</ins>
+            <ins title="nlp 2.00">Categoriarum</ins>
           </span>
         </span>
       </span>
@@ -1289,8 +1289,7 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 2006 1723 2119 1764">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">euim</ins>
-            <del title="nlp 0.90">euim</del>
+            <ins title="nlp 2.00">enim</ins>
           </span>
         </span>
       </span>
@@ -1618,17 +1617,11 @@
         </span>
         <span id="w_271" class="ocr_word" title="bbox 2027 2138 2119 2179">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sup-</ins>
+            <ins title="nlp 2.00">supplendum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 295 2201 2119 2259">
-        <span id="w_272" class="ocr_word" title="bbox 295 2203 500 2259">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">plendum</ins>
-            <del title="nlp 0.90">supplendum</del>
-          </span>
-        </span>
         <span id="w_273" class="ocr_word" title="bbox 531 2216 585 2244">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -2056,17 +2049,11 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1877 2681 2121 2722">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">accomoda-</ins>
+            <ins title="nlp 2.00">accomodaverunt</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 299 2759 2121 2814">
-        <span id="w_343" class="ocr_word" title="bbox 299 2763 454 2800">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">verunt</ins>
-            <del title="nlp 0.90">accomodaverunt</del>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 486 2762 528 2800">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
@@ -2193,7 +2180,7 @@
       <span class="ocr_line" title="bbox 398 2999 2120 3046">
         <span id="w_364" class="ocr_word" title="bbox 398 3000 421 3039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0</ins>
+            <ins title="nlp 2.00">1)</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 448 2999 543 3033">
