--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0053.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0053.html
@@ -542,9 +542,14 @@
             <ins class="alt" title="nlp 1.00">δεσμόν,</ins>
           </span>
         </span>
-        <span id="w_102" class="ocr_word" title="bbox 955 892 1032 947">
+        <span id="w_102_0" class="ocr_word" title="bbox 955 892 1032 947">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ὃν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὃν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_102_1" class="ocr_word" title="bbox 955 892 1032 947">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1064 896 1179 946" lang="grc">
@@ -565,11 +570,6 @@
         <span id="w_106" class="ocr_word" title="bbox 1576 889 1639 929" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_107" class="ocr_word" title="bbox 1662 890 1851 934" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λύσωμεν,</ins>
           </span>
         </span>
       </span>
