--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0101.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0101.html
@@ -1930,9 +1930,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 1509 2540 1605 2594" lang="grc">
+        <span id="w_373_0" class="ocr_word" title="bbox 1509 2540 1605 2594">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πᾶν</ins>
+            <ins class="alt" title="nlp 2.00">(πᾶν</ins>
+          </span>
+        </span>
+        <span id="w_373_1" class="ocr_word" title="bbox 1509 2540 1605 2594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_374" class="ocr_word" title="bbox 1627 2541 1700 2595" lang="grc">
@@ -1943,11 +1948,6 @@
         <span id="w_375" class="ocr_word" title="bbox 1723 2556 1825 2586" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶδος</ins>
-          </span>
-        </span>
-        <span id="w_376" class="ocr_word" title="bbox 1858 2552 1923 2588">
-          <span class="alternatives">
-            <ins title="nlp 2.00">69ν</ins>
           </span>
         </span>
       </span>
@@ -2586,7 +2586,7 @@
         </span>
         <span id="w_499" class="ocr_word" title="bbox 1664 3172 1770 3205">
           <span class="alternatives">
-            <ins title="nlp 2.00">30 τῷ</ins>
+            <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
         <span id="w_500" class="ocr_word" title="bbox 1790 3172 1932 3215">
@@ -2620,7 +2620,7 @@
         </span>
         <span id="w_505" class="ocr_word" title="bbox 441 3233 476 3273">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἡ</ins>
+            <ins title="nlp 2.00">ἡ</ins>
           </span>
         </span>
         <span id="w_506" class="ocr_word" title="bbox 501 3235 534 3265">
@@ -2628,9 +2628,14 @@
             <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_507" class="ocr_word" title="bbox 553 3234 704 3279">
+        <span id="w_507_0" class="ocr_word" title="bbox 553 3234 704 3279">
           <span class="alternatives">
-            <ins title="nlp 2.00">δευτέρα&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">δευτέρα&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_507_1" class="ocr_word" title="bbox 553 3234 704 3279">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_508" class="ocr_word" title="bbox 723 3232 740 3277" lang="grc">
@@ -2673,11 +2678,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">an</ins>
             <del title="nlp 0.90">an</del>
-          </span>
-        </span>
-        <span id="w_516" class="ocr_word" title="bbox 1852 3228 1930 3276">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γὰρ?</ins>
           </span>
         </span>
       </span>
