--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0054.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0054.html
@@ -1038,7 +1038,7 @@
       <span class="ocr_line" title="bbox 427 1750 2105 1806">
         <span id="w_195" class="ocr_word" title="bbox 427 1750 522 1804" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὐπὸ</ins>
+            <ins title="nlp 2.00">ὐπὸ</ins>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 554 1765 678 1804" lang="grc">
@@ -2242,9 +2242,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_419" class="ocr_word" title="bbox 765 2925 874 2971" lang="grc">
+        <span id="w_419_0" class="ocr_word" title="bbox 765 2925 874 2971">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;πρὸς&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;πρὸς&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_419_1" class="ocr_word" title="bbox 765 2925 874 2971">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_420" class="ocr_word" title="bbox 899 2926 1045 2972" lang="grc">
@@ -2300,11 +2305,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">p.</ins>
             <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_430" class="ocr_word" title="bbox 2015 2937 2081 2970" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">305</ins>
           </span>
         </span>
       </span>
