--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0015.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0015.html
@@ -80,17 +80,11 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1801 279 1942 320">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iiitevi-</ins>
+            <ins title="nlp 2.00">interiisse</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 129 357 1912 413">
-        <span id="w_12" class="ocr_word" title="bbox 129 361 212 403">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">isse</ins>
-            <del title="nlp 0.90">iiiteviisse</del>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 244 360 420 413">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eiusque</ins>
@@ -161,8 +155,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 950 457 1035 484">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uon</ins>
-            <del title="nlp 0.90">uon</del>
+            <ins title="nlp 2.00">non</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1068 443 1377 485">
@@ -341,8 +334,7 @@
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1287 682 1425 736">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ipsuni</ins>
-            <del title="nlp 0.90">ipsuni</del>
+            <ins title="nlp 2.00">ipsum</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1475 682 1683 723">
@@ -1046,9 +1038,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_175" class="ocr_word" title="bbox 1131 1649 1151 1688" lang="grc">
+        <span id="w_175_0" class="ocr_word" title="bbox 1131 1649 1151 1688">
           <span class="alternatives">
-            <ins title="nlp 2.00">1—34</ins>
+            <ins class="alt" title="nlp 2.00">1—34</ins>
+          </span>
+        </span>
+        <span id="w_175_1" class="ocr_word" title="bbox 1131 1649 1151 1688">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1299 1647 1492 1688">
@@ -1075,12 +1072,6 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_180" class="ocr_word" title="bbox 1896 1643 1942 1693">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P,</ins>
-            <del title="nlp 0.90">P,</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 128 1723 1943 1783">
         <span id="w_181" class="ocr_word" title="bbox 128 1743 167 1783">
@@ -1089,9 +1080,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_182" class="ocr_word" title="bbox 189 1729 355 1770" lang="grc">
+        <span id="w_182_0" class="ocr_word" title="bbox 189 1729 355 1770">
           <span class="alternatives">
-            <ins title="nlp 2.00">35—39</ins>
+            <ins class="alt" title="nlp 2.00">35—39</ins>
+          </span>
+        </span>
+        <span id="w_182_1" class="ocr_word" title="bbox 189 1729 355 1770">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 395 1727 539 1769">
@@ -1112,9 +1108,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 716 1728 984 1779">
+        <span id="w_186_0" class="ocr_word" title="bbox 716 1728 984 1779">
           <span class="alternatives">
-            <ins title="nlp 2.00">40–100,27</ins>
+            <ins class="alt" title="nlp 2.00">40—100,27</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 716 1728 984 1779">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1025 1726 1239 1768">
@@ -1133,23 +1134,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
             <del title="nlp 0.90">et</del>
-          </span>
-        </span>
-        <span id="w_190" class="ocr_word" title="bbox 1419 1726 1466 1779">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V,</ins>
-            <del title="nlp 0.90">V,</del>
-          </span>
-        </span>
-        <span id="w_191" class="ocr_word" title="bbox 1506 1739 1545 1779">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_192" class="ocr_word" title="bbox 1579 1723 1943 1776">
-          <span class="alternatives">
-            <ins title="nlp 2.00">100,28–104,12</ins>
           </span>
         </span>
       </span>
@@ -1284,17 +1268,11 @@
         </span>
         <span id="w_214" class="ocr_word" title="bbox 1833 1884 1945 1924">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lacu-</ins>
+            <ins title="nlp 2.00">lacunarum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 129 1964 1947 2022">
-        <span id="w_215" class="ocr_word" title="bbox 129 1981 278 2008">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">narum</ins>
-            <del title="nlp 0.90">lacunarum</del>
-          </span>
-        </span>
         <span id="w_216" class="ocr_word" title="bbox 313 1967 650 2022">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">mendorumque</ins>
@@ -1783,7 +1761,7 @@
         </span>
         <span id="w_296" class="ocr_word" title="bbox 819 2610 1068 2664" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαιρεῖται).</ins>
+            <ins title="nlp 2.00">(διαιρεῖται).</ins>
           </span>
         </span>
         <span id="w_297" class="ocr_word" title="bbox 1138 2609 1320 2663">
@@ -2007,8 +1985,7 @@
       <span class="ocr_line" title="bbox 137 2926 1946 2982">
         <span id="w_338" class="ocr_word" title="bbox 137 2940 235 2979">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Tptot.</ins>
-            <del title="nlp 0.90">Tptot.</del>
+            <ins title="nlp 2.00">τρία.</ins>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 303 2941 400 2968">
