--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0102.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0102.html
@@ -1658,9 +1658,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1120 2177 1407 2235">
-        <span id="w_321" class="ocr_word" title="bbox 1120 2177 1279 2233" lang="grc">
+        <span id="w_321_0" class="ocr_word" title="bbox 1120 2177 1279 2233">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κβ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_321_1" class="ocr_word" title="bbox 1120 2177 1279 2233">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κβ'&amp;003E;</ins>
           </span>
         </span>
       </span>
