--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0055.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0055.html
@@ -163,7 +163,7 @@
         </span>
         <span id="w_29" class="ocr_word" title="bbox 374 422 440 475" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦν</ins>
+            <ins title="nlp 2.00">(ἦν</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 473 436 543 473" lang="grc">
