--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0057.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0057.html
@@ -948,7 +948,7 @@
         </span>
         <span id="w_183" class="ocr_word" title="bbox 1289 1331 1441 1386" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
+            <ins title="nlp 2.00">(ὥσπερ</ins>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1474 1349 1493 1373" lang="grc">
@@ -2233,7 +2233,7 @@
         </span>
         <span id="w_435" class="ocr_word" title="bbox 1630 2848 1670 2881" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 οἶδε]εἶδεν Ρ</ins>
+            <ins title="nlp 2.00">οἶδε]εἶδεν Ρ</ins>
           </span>
         </span>
       </span>
@@ -2561,14 +2561,14 @@
             <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
           </span>
         </span>
-        <span id="w_498" class="ocr_word" title="bbox 1795 3084 1886 3128" lang="grc">
+        <span id="w_498_0" class="ocr_word" title="bbox 1795 3084 1886 3128">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;γὰρ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
           </span>
         </span>
-        <span id="w_499" class="ocr_word" title="bbox 1900 3083 1914 3116">
+        <span id="w_498_1" class="ocr_word" title="bbox 1795 3084 1886 3128">
           <span class="alternatives">
-            <ins title="nlp 2.00">?</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2645,7 +2645,7 @@
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1695 3143 1838 3187" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ὣσπερ&amp;x003E;</ins>
+            <ins title="nlp 2.00">x003E;</ins>
           </span>
         </span>
         <span id="w_514" class="ocr_word" title="bbox 1863 3140 1915 3187">
@@ -2688,7 +2688,7 @@
         </span>
         <span id="w_521" class="ocr_word" title="bbox 946 3203 977 3239" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ο</ins>
           </span>
         </span>
         <span id="w_522" class="ocr_word" title="bbox 1005 3200 1191 3243">
